--- a/src/patternfly/components/DataList/data-list-check.hbs
+++ b/src/patternfly/components/DataList/data-list-check.hbs
@@ -2,7 +2,8 @@
   {{#if data-list-check--attribute}}
     {{{data-list-check--attribute}}}
   {{/if}}>
-  {{#> check check--modifier="pf-m-standalone"}}
-    {{#> check-input check-input--attribute=(concat 'name="' data-list--id '-' data-list-item--id '-checkbox" aria-labelledby="' data-list--id '-' data-list-item--id '"' data-list-check-checkbox--attribute)}}{{/check-input}}
-  {{/check}}
+  {{> check
+      check--IsStandalone=true
+      check--IsLabelWrapped=true
+      check--id=(concat data-list--id '-' data-list-item--id '"' data-list-check-checkbox--attribute)}}
 </div>
