--- a/src/patternfly/components/Table/templates/table--scrollable.hbs
+++ b/src/patternfly/components/Table/templates/table--scrollable.hbs
@@ -1,4 +1,4 @@
-{{#> table table--id=table--scrollable--id table--grid="true" table--modifier=table--scrollable--modifier table--attribute='aria-label="This is a scrollable table"'}}
+{{#> table table--id=table--scrollable--id table--IsGrid=true table--modifier=table--scrollable--modifier table--attribute='aria-label="This is a scrollable table"'}}
   {{#> table-thead}}
     {{> table--scrollable--thead--tr table--tr--modifier="pf-m-nowrap" cell-1--content="Fact" cell-2--content="State" cell-3--content="Header 3" cell-4--content="Header 4" cell-5--content="Header 5" cell-6--content="Header 6" cell-7--content="Header 7" cell-8--content="Header 8" cell-9--content="Header 9"}}
   {{/table-thead}}
