--- a/src/patternfly/components/Table/templates/table-tr--basic.hbs
+++ b/src/patternfly/components/Table/templates/table-tr--basic.hbs
@@ -1,5 +1,5 @@
 {{#> table-tr table-tr--index=table-tr--basic--index}}
-  {{> table--check}}
+  {{> table-cell-check}}
   {{#> table-th table-th--data-label="Repository name"}}
     {{#if table-tr--basic--title}}
       <div id="{{table--id}}-node{{table-tr--basic--index}}">{{{table-tr--basic--title}}}</div>
@@ -8,7 +8,5 @@
       <a href="#">siemur/test-space</a>
     {{/if}}
   {{/table-th}}
-  {{#> table-td table-td--action="true"}}
-    {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-selectable-' table-tr--basic--index) dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-  {{/table-td}}
+  {{> table-cell-action}}
 {{/table-tr}}
