--- a/src/patternfly/components/Table/templates/table-tr--nested-column-header.hbs
+++ b/src/patternfly/components/Table/templates/table-tr--nested-column-header.hbs
@@ -1,4 +1,4 @@
-{{#> table--tr}}
+{{#> table-tr}}
   {{#> table-td table-td--data-label="Source"}}
     {{#> l-flex l-flex--modifier="pf-m-nowrap"}}
       {{#> l-flex-item}}
@@ -53,4 +53,4 @@
   {{#> table-td table-td--data-label="Packets"}}
     3
   {{/table-td}}
-{{/table--tr}}
+{{/table-tr}}
