--- a/src/patternfly/components/Table/table-td.hbs
+++ b/src/patternfly/components/Table/table-td.hbs
@@ -1,16 +1,16 @@
 <{{#if table-td--type}}{{table-td--type}}{{else}}td{{/if}} class="{{pfv}}table__td
-  {{~#if table-td--IsToggle}} {{pfv}}table__toggle{{/if}}
-  {{~#if table-td--IsCheck}} {{pfv}}table__check{{/if}}
-  {{~#if table-td--IsAction}} {{pfv}}table__action{{/if}}
-  {{~#if table-td--HasOverflowMenu}} {{pfv}}table__action{{/if}}
-  {{~#if table-td--icon}} {{pfv}}table__icon{{/if}}
-  {{~#if table-td--compound-expansion-toggle}} {{pfv}}table__compound-expansion-toggle{{/if}}
-  {{~#if table-td--IsStickyColumn}} {{pfv}}table__sticky-column{{/if}}
-  {{~#if table-td--IsFavorite}} {{pfv}}table__favorite{{/if}}
-  {{~#if table-td--IsDraggable}} {{pfv}}table__draggable{{/if}}
-  {{~#if table-td--IsFavorited}} pf-m-favorited{{/if}}
-  {{~#if table--IsCompact}} pf-m-compact{{/if}}
-  {{~#if table-td--modifier}} {{table-td--modifier}}{{/if}}"
+  {{#if table-td--IsToggle}} {{pfv}}table__toggle{{/if}}
+  {{#if table-td--IsCheckbox}} {{pfv}}table__check{{/if}}
+  {{#if table-td--IsAction}} {{pfv}}table__action{{/if}}
+  {{#if table-td--IsOverflowMenu}} {{pfv}}table__action{{/if}}
+  {{#if table-td--IsIcon}} {{pfv}}table__icon{{/if}}
+  {{#if table-td--IsCompoundExpansionToggle}} {{pfv}}table__compound-expansion-toggle{{/if}}
+  {{#if table-td--IsStickyColumn}} {{pfv}}table__sticky-column{{/if}}
+  {{#if table-td--IsFavorite}} {{pfv}}table__favorite{{/if}}
+  {{#if table-td--IsDraggable}} {{pfv}}table__draggable{{/if}}
+  {{#if table-td--IsFavorited}} pf-m-favorited{{/if}}
+  {{#if table--IsCompact}} pf-m-compact{{/if}}
+  {{#if table-td--modifier}} {{table-td--modifier}}{{/if}}"
   {{#unless table-td--IsEmpty}}
     {{#unless table-td--type}}
       {{#if table--IsTree-view}}
@@ -27,23 +27,7 @@
     data-label="{{table-td--data-label}}"
   {{/if}}>
   {{#unless table-td--IsEmpty}}
-    {{#if table-td--HasOverflowMenu}}
-      {{> table--overflow-menu}}
-    {{else if table-td--IsAction}}
-      {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=(ternary menu-toggle--icon false true) menu-toggle--aria-label='Table actions'}}
-      {{!-- TODO: add small variant to menu toggle --}}
-    {{else if table-td--IsToggle}}
-      {{#> button
-          button--aria-label='Toggle row'
-          button--IsSmall=table--IsCompact
-          button--IsPlain=true
-          button--IsExpanded=table-tr--expanded
-          button--IsAriaExpanded=table-tr--expanded
-          button--id=(dasherize table--id 'toggle' table-tr--index)
-      }}
-        {{> table-toggle-icon}}
-      {{/button}}
-    {{else if table-td--compound-expansion-toggle}}
+    {{#if table-td--IsCompoundExpansionToggle}}
       {{#> table-button table-button--attribute=table-th--button--attribute}}
         {{#> table-text}}
           {{> @partial-block}}
@@ -53,6 +37,17 @@
       {{> table-favorite-button}}
     {{else if table-td--IsDraggable}}
       {{> table-draggable-button}}
+    {{else if table-td--IsToggle}}
+      {{#> button
+          button--aria-label='Toggle row'
+          button--IsSmall=table--IsCompact
+          button--IsPlain=true
+          button--IsExpanded=table-tr--IsExpanded
+          button--IsAriaExpanded=table-tr--IsExpanded
+          button--id=(dasherize table--id 'toggle' table-tr--index)
+      }}
+        {{> table-toggle-icon}}
+      {{/button}}
     {{else if @partial-block}}
       {{> @partial-block}}
     {{/if}}
