--- a/src/patternfly/components/Table/table.hbs
+++ b/src/patternfly/components/Table/table.hbs
@@ -1,11 +1,15 @@
 <table class="{{pfv}}table
-  {{#if table--expandable}} pf-m-expandable{{/if}}
+  {{#if table--IsExpandable}} pf-m-expandable{{/if}}
   {{#if table--IsTree-view}} pf-m-tree-view{{/if}}
   {{#if tree-view--HasCheckboxes}} pf-m-tree-view-checkboxes{{/if}}
   {{#if table--HasNoPosinset}} pf-m-no-inset{{/if}}
+  {{#if table--IsCompact}} pf-m-compact{{/if}}
   {{#if table--modifier}} {{table--modifier}}{{/if}}"
-  {{#if table--grid}}
+  {{#if table--IsGrid}}
     role="grid"
+  {{/if}}
+  {{#if table--aria-label}}
+    aria-label="{{table--aria-label}}"
   {{/if}}
   {{#unless table--HasNoInset}}
     {{#if table--IsTree-view}}
