--- a/src/patternfly/components/Table/templates/table--check.hbs
+++ b/src/patternfly/components/Table/templates/table--check.hbs
@@ -1,4 +1,4 @@
-{{#> table-td table-td--IsCheck=true}}
+{{#> table-td table-td--IsCheckbox=true}}
   {{#if table--check--IsThead}}
     {{> table-check table-check--name=(concat table--id '-checkrow' table-tr--index) table-check--aria-label="Select all rows"}}
   {{else}}
