--- a/src/patternfly/components/Table/templates/table--radio.hbs
+++ b/src/patternfly/components/Table/templates/table--radio.hbs
@@ -1,4 +1,4 @@
-{{#> table-td table-td--IsCheck=true}}
+{{#> table-td table-td--IsCheckbox=true}}
   {{#> radio radio--IsStandalone=true}}
     {{#> radio-input radio-input--attribute=(concat 'name="' table--id '-radio" aria-labelledby="' table--id '-node' table-tr--index '"')}}{{/radio-input}}
   {{/radio}}
