--- a/src/patternfly/components/Table/templates/table--scrollable--thead--tr.hbs
+++ b/src/patternfly/components/Table/templates/table--scrollable--thead--tr.hbs
@@ -4,15 +4,15 @@
         table--scrollable--th--modifier=table--scrollable--th--modifier--cell-1-modifier
         table--scrollable--th--content=cell-1--content
         table-th--attribute='scope="col" style="--pf-v6-c-table__sticky-cell--MinWidth: 100px;"'
-        table-th--sortable=true
+        table-th--IsSortable=true
         table-th--IsStickyLeft=true}}
   {{else}}
-    {{> table--scrollable--th table--scrollable--th--content=cell-1--content table-th--sortable=true}}
+    {{> table--scrollable--th table--scrollable--th--content=cell-1--content table-th--IsSortable=true}}
   {{/if}}
   {{#if table--scrollable--Column2IsStickyColumn}}
-    {{> table--scrollable--th table--scrollable--th--modifier=table--scrollable--th--modifier--cell-2-modifier table--scrollable--th--content=cell-2--content table-th--attribute='scope="col" style="--pf-v6-c-table__sticky-cell--MinWidth: 120px; --pf-v6-c-table__sticky-cell--Left: 100px;"' table-th--sortable=true table-th--IsStickyLeft=true}}
+    {{> table--scrollable--th table--scrollable--th--modifier=table--scrollable--th--modifier--cell-2-modifier table--scrollable--th--content=cell-2--content table-th--attribute='scope="col" style="--pf-v6-c-table__sticky-cell--MinWidth: 120px; --pf-v6-c-table__sticky-cell--Left: 100px;"' table-th--IsSortable=true table-th--IsStickyLeft=true}}
   {{else}}
-    {{> table--scrollable--th table--scrollable--th--content=cell-2--content table-th--sortable=true}}
+    {{> table--scrollable--th table--scrollable--th--content=cell-2--content table-th--IsSortable=true}}
   {{/if}}
   {{> table--scrollable--th table--scrollable--th--content=cell-3--content table--scrollable--th--icon=cell-3--icon}}
   {{> table--scrollable--th table--scrollable--th--content=cell-4--content table--scrollable--th--icon=cell-4--icon}}
