--- a/src/patternfly/components/Table/templates/table-tbody--expandable.hbs
+++ b/src/patternfly/components/Table/templates/table-tbody--expandable.hbs
@@ -1,7 +1,7 @@
 {{#> table-tbody table-tbody--IsExpanded=table-tbody--expandable--IsExpanded}}
-  {{#> table-tr table-tr--IsExpanded="true" table-tr--expanded=table-tbody--expandable--IsExpanded table-tr--index=table-tbody--expandable--index}}
-    {{> table--toggle}}
-    {{> table--check}}
+  {{#> table-tr table-tr--IsExpanded=true table-tr--IsExpanded=table-tbody--expandable--IsExpanded table-tr--index=table-tbody--expandable--index}}
+    {{> table-cell-toggle}}
+    {{> table-cell-check}}
     {{#> table-th table-th--data-label="Repository name"}}
       <div>
         {{#if table-tbody--expandable--title}}
@@ -21,19 +21,17 @@
     {{#> table-td table-td--data-label="Action"}}
       <a href="#">Link {{table-tbody--expandable--index}}</a>
     {{/table-td}}
-    {{#> table-td table-td--action="true"}}
-      {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-' table-tbody--expandable--index) dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-    {{/table-td}}
+    {{> table-cell-action}}
   {{/table-tr}}
 
-  {{#> table-tr table-tr--expandable="true" table-tr--IsExpanded=table-tbody--expandable--IsExpanded}}
-    {{> table-td table-td--IsEmpty="true"}}
-    {{> table-td table-td--IsEmpty="true"}}
+  {{#> table-tr table-tr--IsExpandable=true table-tr--IsExpanded=table-tbody--expandable--IsExpanded}}
+    {{> table-cell-empty}}
+    {{> table-cell-empty}}
     {{#> table-td table-td--attribute=(concat 'colspan="4" id="' table--id '-content' table-tbody--expandable--index '"')}}
       {{#> table-expandable-row-content}}
         Expandable content
       {{/table-expandable-row-content}}
     {{/table-td}}
-    {{> table-td table-td--IsEmpty="true"}}
+    {{> table-cell-empty}}
   {{/table-tr}}
 {{/table-tbody}}
