--- a/src/patternfly/demos/DataList/data-list-expandable-compact-table.hbs
+++ b/src/patternfly/demos/DataList/data-list-expandable-compact-table.hbs
@@ -1,11 +1,7 @@
-{{#> table table--id="compact-table-demo-data-list" table--grid="true" table--modifier="pf-m-compact pf-m-grid-lg pf-m-no-border-rows" table--attribute='aria-label="This is a compact table example"'}}
+{{#> table table--id="compact-table-demo-data-list" table--IsGrid=true table--modifier="pf-m-compact pf-m-grid-lg pf-m-no-border-rows" table--attribute='aria-label="This is a compact table example"'}}
   {{#> table-thead}}
     {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute='name="check-all" aria-label="Select all rows"'}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+      {{> table-cell-check}}
       {{#> table-th table-th--attribute='scope="col"'}}
         Contributor
       {{/table-th}}
@@ -21,20 +17,16 @@
       {{#> table-th table-th--attribute='scope="col"'}}
         Numbers
       {{/table-th}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--icon="true"}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsIcon=true}}
         Icons
       {{/table-th}}
-      {{> table-td table-td--IsEmpty="true"}}
-      {{> table-td table-td--IsEmpty="true"}}
+      {{> table-cell-empty}}
+      {{> table-cell-empty}}
     {{/table-tr}}
   {{/table-thead}}
   {{#> table-tbody}}
-    {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow1" aria-labelledby="' table--id '-name1"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+    {{#> table-tr table-tr--index='1'}}
+      {{> table-cell-check}}
       {{#> table-td table-td--data-label="Contributor"}}
         <span id="{{table--id}}-name1">Sam Jones</span>
       {{/table-td}}
@@ -50,22 +42,16 @@
       {{#> table-td table-td--data-label="Numbers"}}
         0556
       {{/table-td}}
-      {{#> table-td table-td--data-label="Icon" table-td--icon="true"}}
+      {{#> table-td table-td--data-label="Icon" table-td--IsIcon=true}}
         <i class="fas fa-check"></i>
       {{/table-td}}
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab-1") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
-    {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow2" aria-labelledby="' table--id '-name2"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+    {{#> table-tr table-tr--index='2'}}
+      {{> table-cell-check}}
       {{#> table-th table-th--data-label="Contributor"}}
         <span id="{{table--id}}-name2">Amy Miller</span>
       {{/table-th}}
@@ -81,22 +67,16 @@
       {{#> table-td table-td--data-label="Numbers"}}
         9492
       {{/table-td}}
-      {{#> table-td table-td--data-label="Icon" table-td--icon="true"}}
+      {{#> table-td table-td--data-label="Icon" table-td--IsIcon=true}}
         <i class="fas fa-check"></i>
       {{/table-td}}
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab-2") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
-    {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow3" aria-labelledby="' table--id '-name3"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+    {{#> table-tr table-tr--index='3'}}
+      {{> table-cell-check}}
       {{#> table-th table-th--data-label="Contributor"}}
         <span id="{{table--id}}-name3">Steve Wilson</span>
       {{/table-th}}
@@ -112,22 +92,16 @@
       {{#> table-td table-td--data-label="Numbers"}}
         9929
       {{/table-td}}
-      {{#> table-td table-td--data-label="Icon" table-td--icon="true"}}
+      {{#> table-td table-td--data-label="Icon" table-td--IsIcon=true}}
         <i class="fas fa-check"></i>
       {{/table-td}}
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab-3") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
-    {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow4" aria-labelledby="' table--id '-name4"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+    {{#> table-tr table-tr--index='4'}}
+      {{> table-cell-check}}
       {{#> table-td table-td--data-label="Contributor name"}}
         <span id="{{table--id}}-name4">Emma Jackson</span>
       {{/table-td}}
@@ -143,15 +117,13 @@
       {{#> table-td table-td--data-label="Last commit"}}
         2217
       {{/table-td}}
-      {{#> table-td table-td--data-label="Icon" table-td--icon="true"}}
+      {{#> table-td table-td--data-label="Icon" table-td--IsIcon=true}}
         <i class="fas fa-check"></i>
       {{/table-td}}
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab-4") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
   {{/table-tbody}}
 {{/table}}
