--- a/src/patternfly/demos/Skeleton/table-skeleton.hbs
+++ b/src/patternfly/demos/Skeleton/table-skeleton.hbs
@@ -1,7 +1,7 @@
-{{#> table table--id=(concat page--id '-table') table--grid="true" table--modifier=(concat 'pf-m-grid-md ' table-simple-table--modifier) table--attribute='aria-label="This is a table with checkboxes"'}}
+{{#> table table--id=(concat page--id '-table') table--IsGrid=true table--modifier=(concat 'pf-m-grid-md ' table-simple-table--modifier) table--attribute='aria-label="This is a table with checkboxes"'}}
   {{#> table-thead}}
     {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
+      {{#> table-td table-td--IsCheckbox=true}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute='name="check-all" aria-label="Select all rows"'}}{{/check-input}}
         {{/check}}
@@ -21,8 +21,8 @@
       {{#> table-th table-th--attribute='scope="col"'}}
         Last commit
       {{/table-th}}
-      {{#> table-td}}{{/table-td}}
-      {{#> table-td}}{{/table-td}}
+      {{> table-cell-empty}}
+      {{> table-cell-empty}}
     {{/table-tr}}
   {{/table-thead}}
   {{#> table-tbody}}
