--- a/src/patternfly/demos/Table/table-compound-expansion-table.hbs
+++ b/src/patternfly/demos/Table/table-compound-expansion-table.hbs
@@ -1,13 +1,13 @@
-{{#> table table--id=(concat page--id '-table') table--grid="true" table--modifier="pf-m-grid-md" table--expandable="true" table--attribute='aria-label="Compound expandable table example"'}}
+{{#> table table--id=(concat page--id '-table') table--IsGrid=true table--modifier="pf-m-grid-md" table--IsExpandable=true table--attribute='aria-label="Compound expandable table example"'}}
   {{#> table-thead}}
     {{#> table-tr}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--sortable="true" table-th--selected="true" table-th--asc="true" table-th--modifier="pf-m-width-30"}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true table-th--IsSelected="true" table-th--IsAsc="true" table-th--modifier="pf-m-width-30"}}
         Repositories
       {{/table-th}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--sortable="true"}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true}}
         Branches
       {{/table-th}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--sortable="true"}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true}}
         Pull requests
       {{/table-th}}
       {{#> table-th table-th--attribute='scope="col"'}}
@@ -16,8 +16,8 @@
       {{#> table-th table-th--attribute='scope="col"'}}
         Last commit
       {{/table-th}}
-      {{#> table-td}}{{/table-td}}
-      {{#> table-td}}{{/table-td}}
+      {{> table-cell-empty}}
+      {{> table-cell-empty}}
     {{/table-tr}}
   {{/table-thead}}
 
@@ -26,19 +26,19 @@
       {{#> table-th table-th--data-label="Repository name"}}
         <a href="#">siemur/test-space</a>
       {{/table-th}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--modifier="pf-m-expanded" table-td--data-label="Branches" table-td--button--attribute=(concat 'aria-expanded="true" aria-controls="' table--id '-nested-table-1"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--modifier="pf-m-expanded" table-td--data-label="Branches" table-td--button--attribute=(concat 'aria-expanded="true" aria-controls="' table--id '-nested-table-1"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-code-branch" aria-hidden="true"></i>
         {{/button-icon}}
         10
       {{/table-td}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--data-label="Pull requests" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-2"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--data-label="Pull requests" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-2"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-code" aria-hidden="true"></i>
         {{/button-icon}}
           4
       {{/table-td}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--data-label="Work spaces" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-3"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--data-label="Work spaces" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-3"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-cube" aria-hidden="true"></i>
         {{/button-icon}}
@@ -50,26 +50,24 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-1') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true" table-tr--IsExpanded="true"}}
+    {{#> table-tr table-tr--IsExpandable=true table-tr--IsExpanded=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-1')}}
         {{/table-nested}}
       {{/table-td}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true"}}
+    {{#> table-tr table-tr--IsExpandable=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-2')}}
         {{/table-nested}}
       {{/table-td}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true"}}
+    {{#> table-tr table-tr--IsExpandable=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-3')}}
         {{/table-nested}}
@@ -82,19 +80,19 @@
       {{#> table-th table-th--data-label="Repository name"}}
         <a href="#">siemur/test-space</a>
       {{/table-th}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--data-label="Branches" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-4"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--data-label="Branches" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-4"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-code-branch" aria-hidden="true"></i>
         {{/button-icon}}
         3
       {{/table-td}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--data-label="Pull requests" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-5"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--data-label="Pull requests" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-5"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-code" aria-hidden="true"></i>
         {{/button-icon}}
         4
       {{/table-td}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--data-label="Work spaces" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-6"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--data-label="Work spaces" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-6"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-cube" aria-hidden="true"></i>
         {{/button-icon}}
@@ -106,26 +104,24 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-2') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true"}}
+    {{#> table-tr table-tr--IsExpandable=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-4')}}
         {{/table-nested}}
       {{/table-td}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true"}}
+    {{#> table-tr table-tr--IsExpandable=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-5')}}
         {{/table-nested}}
       {{/table-td}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true"}}
+    {{#> table-tr table-tr--IsExpandable=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-6')}}
         {{/table-nested}}
@@ -138,19 +134,19 @@
       {{#> table-th table-th--data-label="Repository name"}}
         <a href="#">siemur/test-space</a>
       {{/table-th}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--data-label="Branches" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-7"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--data-label="Branches" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-7"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-code-branch" aria-hidden="true"></i>
         {{/button-icon}}
         70
       {{/table-td}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--data-label="Pull requests" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-8"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--data-label="Pull requests" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-8"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-code" aria-hidden="true"></i>
         {{/button-icon}}
         15
       {{/table-td}}
-      {{#> table-td table-td--compound-expansion-toggle="true" table-td--data-label="Work spaces" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-9"')}}
+      {{#> table-td table-td--IsCompoundExpansionToggle=true table-td--data-label="Work spaces" table-td--button--attribute=(concat 'aria-expanded="false" aria-controls="' table--id '-nested-table-9"')}}
         {{#> button-icon button-icon--modifier="pf-m-start"}}
           <i class="fas fa-cube" aria-hidden="true"></i>
         {{/button-icon}}
@@ -162,26 +158,24 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-3') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true"}}
+    {{#> table-tr table-tr--IsExpandable=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-7')}}
         {{/table-nested}}
       {{/table-td}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true"}}
+    {{#> table-tr table-tr--IsExpandable=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-8')}}
         {{/table-nested}}
       {{/table-td}}
     {{/table-tr}}
 
-    {{#> table-tr table-tr--expandable="true"}}
+    {{#> table-tr table-tr--IsExpandable=true}}
       {{#> table-td table-td--attribute='colspan="7"' table-td--modifier="pf-m-no-padding"}}
         {{#> table-nested table--id=(concat table--id '-nested-table-9')}}
         {{/table-nested}}
