--- a/src/patternfly/demos/Table/table-empty-state-table.hbs
+++ b/src/patternfly/demos/Table/table-empty-state-table.hbs
@@ -1,7 +1,7 @@
-{{#> table table--id="empty-state-table-demo" table--grid="true" table--modifier="pf-m-grid-xl" table--attribute='aria-label="This is a table showing an empty state"'}}
+{{#> table table--id="empty-state-table-demo" table--IsGrid=true table--modifier="pf-m-grid-xl" table--attribute='aria-label="This is a table showing an empty state"'}}
   {{#> table-thead}}
     {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
+      {{#> table-td table-td--IsCheckbox=true}}
         {{#> check check--modifier="pf-m-standalone"}}
           {{#> check-input check-input--attribute='name="check-all" aria-label="Select all rows"'}}{{/check-input}}
         {{/check}}
@@ -21,8 +21,8 @@
       {{#> table-th table-th--attribute='scope="col"'}}
         Last commit
       {{/table-th}}
-      {{#> table-td}}{{/table-td}}
-      {{#> table-td}}{{/table-td}}
+      {{> table-cell-empty}}
+      {{> table-cell-empty}}
     {{/table-tr}}
   {{/table-thead}}
 
