--- a/src/patternfly/demos/Table/table-loading-table.hbs
+++ b/src/patternfly/demos/Table/table-loading-table.hbs
@@ -1,11 +1,7 @@
-{{#> table table--id="table-loading-table" table--grid="true" table--modifier="pf-m-grid-xl" table--attribute='aria-label="This is a table showing a loading state"'}}
+{{#> table table--id="table-loading-table" table--IsGrid=true table--modifier="pf-m-grid-xl" table--attribute='aria-label="This is a table showing a loading state"'}}
   {{#> table-thead}}
     {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute='name="check-all" aria-label="Select all rows"'}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+      {{> table-cell-check}}
       {{#> table-th table-th--attribute='scope="col"'}}
         Repositories
       {{/table-th}}
@@ -21,22 +17,22 @@
       {{#> table-th table-th--attribute='scope="col"'}}
         Last commit
       {{/table-th}}
-      {{#> table-td}}{{/table-td}}
-      {{#> table-td}}{{/table-td}}
+      {{> table-cell-empty}}
+      {{> table-cell-empty}}
     {{/table-tr}}
   {{/table-thead}}
 
   {{#> table-tbody}}
     {{#> table-tr}}
       {{#> table-td table-td--attribute='colspan="8"'}}
-          {{#> empty-state empty-state--modifier="pf-m-sm"}}
-            {{#> empty-state-icon}}
-              {{#> spinner}}Loading...{{/spinner}}
-            {{/empty-state-icon}}
-            {{#> title titleType="h2" title--modifier="pf-m-lg"}}
-              Loading
-            {{/title}}
-          {{/empty-state}}
+        {{#> empty-state empty-state--modifier="pf-m-sm"}}
+          {{#> empty-state-icon}}
+            {{#> spinner}}Loading...{{/spinner}}
+          {{/empty-state-icon}}
+          {{#> title titleType="h2" title--modifier="pf-m-lg"}}
+            Loading
+          {{/title}}
+        {{/empty-state}}
       {{/table-td}}
     {{/table-tr}}
   {{/table-tbody}}
