--- a/src/patternfly/demos/Table/table-sortable-table.hbs
+++ b/src/patternfly/demos/Table/table-sortable-table.hbs
@@ -1,34 +1,30 @@
-{{#> table table--id=(concat page--id '-table') table--grid="true" table--modifier="pf-m-grid-xl" table--attribute='aria-label="This is a sortable table example"'}}
+{{#> table table--id=(concat page--id '-table') table--IsGrid=true table--modifier="pf-m-grid-xl" table--attribute='aria-label="This is a sortable table example"'}}
   {{#> table-thead}}
-    {{#> table-tr}}
-      {{> table-td table-td--IsEmpty="true"}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--sortable="true" table-th--selected="true" table-th--asc="true"}}
+    {{#> table-tr  table-tr--index='1'}}
+      {{> table-cell-empty}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true table-th--IsSelected="true" table-th--IsAsc="true"}}
         Repositories
       {{/table-th}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--sortable="true"}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true}}
         Branches
       {{/table-th}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--sortable="true"}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true}}
         Pull requests
       {{/table-th}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--sortable="true"}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true}}
         Workspaces
       {{/table-th}}
-      {{#> table-th table-th--attribute='scope="col"' table-th--sortable="true"}}
+      {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true}}
         Last commit
       {{/table-th}}
-      {{> table-td table-td--IsEmpty="true"}}
-      {{> table-td table-td--IsEmpty="true"}}
+      {{> table-cell-empty}}
+      {{> table-cell-empty}}
     {{/table-tr}}
   {{/table-thead}}
 
   {{#> table-tbody}}
-    {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow1" aria-labelledby="' table--id '-node1"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+    {{#> table-tr  table-tr--index='2'}}
+      {{> table-cell-check}}
       {{#> table-th table-th--data-label="Repository name"}}
         <div>
           <div id="{{table--id}}-node1">Node 1</div>
@@ -50,17 +46,11 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-1') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
 
-      {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow2" aria-labelledby="' table--id '-node2"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+      {{#> table-tr  table-tr--index='3'}}
+      {{> table-cell-check}}
       {{#> table-th table-th--data-label="Repository name"}}
         <div>
           <div id="{{table--id}}-node2">Node 2</div>
@@ -82,17 +72,11 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-2') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
 
-    {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow3" aria-labelledby="' table--id '-node3"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+    {{#> table-tr  table-tr--index='4'}}
+      {{> table-cell-check}}
       {{#> table-th table-th--data-label="Repository name"}}
         <div>
           <div id="{{table--id}}-node3">Node 3</div>
@@ -114,17 +98,11 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-3') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
 
-    {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow4" aria-labelledby="' table--id '-node4"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+    {{#> table-tr  table-tr--index='5'}}
+      {{> table-cell-check}}
       {{#> table-th table-th--data-label="Repository name"}}
         <div>
           <div id="{{table--id}}-node4">Node 4</div>
@@ -146,17 +124,11 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-4') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
 
-    {{#> table-tr}}
-      {{#> table-td table-td--IsCheck=true}}
-        {{#> check check--modifier="pf-m-standalone"}}
-          {{#> check-input check-input--attribute=(concat 'name="checkrow5" aria-labelledby="' table--id '-node5"')}}{{/check-input}}
-        {{/check}}
-      {{/table-td}}
+    {{#> table-tr  table-tr--index='6'}}
+      {{> table-cell-check}}
       {{#> table-td table-td--data-label="Repository name"}}
         <div>
           <div id="{{table--id}}-node5">Node 5</div>
@@ -178,9 +150,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-5') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{> table-cell-action}}
     {{/table-tr}}
   {{/table-tbody}}
 {{/table}}
